JEDIT 4.1 VERSION HISTORY

* Version 4.1pre2

+ Miscellaneous Changes:

- 'scriptPath' BeanShell variable is set to the macro file path while a
  macro or startup script is executing.

+ Bug Fixes:

- When evaluating BeanShell expressions, the standard
  view/buffer/editPane/textArea variables would not be unset when the
  expression finishes executing.

* Version 4.1pre1

Thanks to Alexander Maryanovsky, Alfonso Garcia, Claude Eisenhut,
Joseph Schroer, Kris Kopicki, Steve Snider and Thomas Dilts for
contributing to this release.

+ Editing Changes:

- Improved rectangular selection. It now does the right thing with hard
  tabs, and the width of the selection is no longer limited to the width
  of the last line. A new 'Vertical Paste' command has been added (it
  behaves in a similar manner to the 'Virtual Paste' macro, which has
  now been removed). When inserting text into a rectangle, the inserted
  text is left-justified with spaces. The quick copy feature has been
  extended to support this -- a Control-middle click vertically pastes
  the most recently selected text.

- Fixed auto-indent behavior when entering constructs like:
  if(foo)
    bar();
  baz();
  in Java/C/C++/etc modes. Previously the 'baz();' would get an
  unnecessary level of indent, requiring it to be removed manually.
  (Alexander Maryanovsky)

- Added an option to the 'Text Area' pane to implement "standard"
  previous/next word behavior, like that in a lot of other programs
  (next word moves caret to start of next word, instead of end of
  current word; previous word moves caret to end of previous word,
  instead of start of current word).

  You might remember I implemented this behavior for a little while in
  the 4.0 pre-releases, but now it's back as a configurable option.
  (Alexander Maryanovsky)

- Added a few extra key bindings for Windows users:
  S+DELETE bound to cut
  C+INSERT bound to copy
  S+INSERT bound to paste
